<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/padding_frame"
    android:orientation="vertical"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_shipping_information_form_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_shipping_information_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/padding_frame"
            android:background="?android:attr/listDivider" />

        <include
            layout="@layout/shipping_info_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/padding_frame"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/text_payment_info_form_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_payment_info_form_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/padding_frame"
            android:background="?android:attr/listDivider" />

        <include
            layout="@layout/payment_info_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/padding_frame"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/text_receipt_summary_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_receipt_summary_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/padding_frame"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_items"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_items" />

            <TextView
                android:id="@+id/text_items_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="$0000.00" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_shipping" />

            <TextView
                android:id="@+id/text_shipping_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="$0000.00" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_items" />

            <TextView
                android:id="@+id/text_tax_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="$0000.00" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/padding_frame"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_total"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <TextView
                android:id="@+id/text_total_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="$0000.00"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/padding_frame"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/button_confirm_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_checkout_confirm" />

    </LinearLayout>
</ScrollView>