<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_frame">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description_product_image"
        app:srcCompat="@drawable/test_item_img" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/gap_vertical_linearlayout"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="$0000.00"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/text_brand_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="Brand name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

    <!--This silly platform does not have a good, clean implementation for spacing between layout children!!!!!!-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="Qty"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <EditText
            android:id="@+id/edit_text_amount"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:ems="10"
            android:foregroundGravity="clip_horizontal"
            android:gravity="center"
            android:inputType="number"
            android:text="1" />

        <TextView
            android:id="@+id/text_stock_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/label_in_stock_prefix"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/gap_vertical_linearlayout"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/button_add_to_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_add_to_cart_action" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/gap_vertical_linearlayout"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/text_description_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_item_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/gap_vertical_linearlayout"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Example description"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
</LinearLayout>