<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:dividerPadding="@dimen/gap_vertical_linearlayout"
    android:orientation="vertical"
    android:showDividers="none">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_frame"
        android:layout_marginBottom="@dimen/padding_frame"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/padding_frame"
            android:layout_marginRight="@dimen/padding_frame"
            android:background="#EDEDED"
            android:contentDescription="@string/content_description_product_image"
            app:srcCompat="@drawable/test_item_img" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Example item name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/text_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$0000.00" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_quantity_prefix" />

                <EditText
                    android:id="@+id/edit_text_amount_view_cart_item"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="Item quantity"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="1" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button_remove_view_cart_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_remove_item_from_cart_action" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

</LinearLayout>